Add filter and search rests for person
