# back/controller/src/main/java/genealogy/visualizer/controller/PersonController.java
@@ -1,10 +1,14 @@
 package genealogy.visualizer.controller;
 
 import genealogy.visualizer.api.PersonApi;
+import genealogy.visualizer.api.model.EasyPerson;
 import genealogy.visualizer.api.model.Person;
+import genealogy.visualizer.api.model.PersonFilter;
 import genealogy.visualizer.service.person.PersonService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 public class PersonController implements PersonApi {
@@ -22,6 +26,11 @@ public class PersonController implements PersonApi {
     }
 
     @Override
+    public ResponseEntity<List<EasyPerson>> filter(PersonFilter personFilter) {
+        return ResponseEntity.ok(personService.filter(personFilter));
+    }
+
+    @Override
     public ResponseEntity<Person> getById(Long id) {
         return ResponseEntity.ok(personService.getById(id));
     }
@@ -29,6 +38,11 @@ public class PersonController implements PersonApi {
     @Override
     public ResponseEntity<Person> save(Person person) {
         return ResponseEntity.ok(personService.save(person));
+    }
+
+    @Override
+    public ResponseEntity<List<EasyPerson>> search(String body) {
+        return ResponseEntity.ok(personService.search(body));
     }
 
     @Override
